# bug-report-poetry-export-mistake-and-or

hoge/: pyproject.toml  requirements.txt
hoge/tests/: test_hoge.py
