[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hoge"
version = "0.1.0"
description = ""
authors = ["keno <keno.ss57@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

gevent = "1.4.0"
greenlet = "0.4.15"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
